--- a/templates/pages/contact/index.html.twig
+++ b/templates/pages/contact/index.html.twig
@@ -43,7 +43,7 @@
                 <div class="row bg my-5">
                     {{ form_start(form) }}
                     <div class="form-group text-white fs-3">
-                        {{ form_label(form.fullName, 'Nom / Prénom', {'label_attr': {'class': 'form-label mt-4'}}) }}
+                        {{ form_label(form.fullName, 'Nom / Prénom', {'label_attr': {'class': 'form-label mt-4 rounded-none'}}) }}
                         {{ form_widget(form.fullName, {'attr': {'class': 'form-control fs-4', 'minlength': 2, 'maxlength': 50}}) }}
                         {{ form_errors(form.fullName) }}
                     </div>
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="form-group text-white">
-                        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-warning rounded-none mt-4'}}) }}
+                        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-warning mt-4'}}) }}
                     </div>
                     {{ form_end(form) }}
                 </div>
