--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -86,7 +86,7 @@
     	     Laissez-vous emporter dans un voyage visuel inoubliable.</p>
 		</section>  
     	<span class="col-sm-12 col-md-3 col-lg-3 d-flex justify-content-center align-items-center ">
-			<a href="#">NOUS CONTACTER</a>
+			<a href="{{ path('contact.index') }}">NOUS CONTACTER</a>
 		</span>
 	</div>
 </div>
