--- a/templates/layouts/_error.html.twig
+++ b/templates/layouts/_error.html.twig
@@ -25,7 +25,7 @@
         <section class="py-3 py-md-5 min-vh-100 d-flex justify-content-center align-items-center">
         <div class="container">
             <div class="row">
-            
+
             <div class="col-12">
                 <div class="text-center fs-1 fw-bold">
                 <h2 class="d-flex justify-content-center align-items-center fs-1 gap-2 mb-4">
@@ -33,7 +33,7 @@
                 </h2>
                 <h3 class="h2 fs-3 mb-2 text-danger">Oops! You're lost.</h3>
                 <p class="mb-5 fs-3">{{ exception.statusText }}</p>
-                <a class="btn bsb-btn-5xl btn-dark rounded-pill px-5 fs-2 m-0" href="#!" role="button">Back to Home</a>
+                <a class="btn bsb-btn-5xl btn-dark rounded-pill px-5 fs-2 m-0" href="{{ path('home.index') }}U" role="button">Back to Home</a>
                 </div>
             </div>
             </div>
